--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,13 @@ h1{
   padding-right: 20px;
   border-radius: 5px;
 }
+
+table{
+  background-color: #E0E0E0;
+  padding: 50px;
+  /* padding-left: 120px; */
+  text-align: center;
+  border-radius: 10px;
+  width: 50%;
+  margin-left: 300px;
+}
