--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,11 @@
 input{
   margin: 10px;
   padding: 10px;
+  width: 300px;
   border-radius: 5px;
   border-style: none;
   background-color: white;
+  /* border: 1px solid red; */
 }
 
 button{
@@ -29,10 +31,13 @@ span{
 form{
   background-color: #E0E0E0;
   border-radius: 10px;
-  width: 30%;
-  padding: 10px;
-  margin-left: 35%;
-  /* margin: 10px; */
+  width: 35%;
+  padding: 5% 0 5% 10%;
+  margin-left: 27%;
+  margin-top: 12%;
+  box-shadow: #3C3C3C;
+  box-shadow: 1px 1px 10px 1px #949494;
+  /* border: 2px solid #3C3C3C; */
 }
 
 h1{
@@ -69,5 +74,139 @@ table{
   text-align: center;
   border-radius: 10px;
   width: 50%;
-  margin-left: 300px;
+  margin-left: 25%;
+  margin-top: 12%;
+  box-shadow: 1px 1px 10px 1px #949494;
+}
+
+.inicial{
+  background-color: white;
+  padding: 10px;
+  margin: 0px;
+  display: flex;
+  /* border-bottom: 1px solid #3C3C3C; */
+}
+
+.button-inicial{
+  margin-left: 65%;
+  height: 40px;
+  margin-top: 20px;
+  border-radius: 10px;
+  background-color: grey;
+}
+
+.conteudo{
+  margin-top: 22%;
+  margin-left: 25%;
+}
+
+.input-inicial{
+  /* text-decoration: none; */
+  border: 1px solid grey;
+  width: 60%;
+  height: 30px;
+  /* border-radius: 0px; */
+}
+
+.logo{
+  padding: 0px;
+  margin: 0px;
+  /* border: 1px solid red; */
+  height: 75px;
+}
+
+.fundo{
+  /* background-image: url('Imagens/fundo.jpg'); */
+  background-color: #E0E0E0;
+  height: 890px;
+}
+
+.span-home{
+  margin: 10px;
+  padding: 10px;
+  font-size: 15px;
+  border: 1px solid #949494;
+  border-radius: 5px;
+  background-color: white;
+}
+
+.span-home:hover{
+  background-color: #E0E0E0;
+}
+
+.upload{
+  display: none;
+}
+
+/* .quadro{
+  padding: 50px;
+  text-align: justify;
+  border-radius: 10px;
+  width: 50%;
+  margin: 20px;
+  box-shadow: 1px 1px 10px 1px #949494;
+} */
+
+.verde{
+  background-color: green;
+  padding: 50px;
+  text-align: justify;
+  border-radius: 10px;
+  width: 89%;
+  margin: 20px;
+  box-shadow: 1px 1px 10px 1px #949494;
+  color: white;
+}
+
+.azul{
+  background-color: blue;
+  padding: 50px;
+  text-align: justify;
+  border-radius: 10px;
+  width: 89%;
+  margin: 20px;
+  box-shadow: 1px 1px 10px 1px #949494;
+  color: white;
+}
+
+.amarelo{
+  background-color: yellow;
+  padding: 50px;
+  text-align: justify;
+  border-radius: 10px;
+  width: 89%;
+  margin: 20px;
+  box-shadow: 1px 1px 10px 1px #949494;
+}
+
+.cinza{
+  background-color: gray;
+  padding: 50px;
+  text-align: justify;
+  border-radius: 10px;
+  width: 89%;
+  margin: 20px;
+  box-shadow: 1px 1px 10px 1px #949494;
+  color: white;
+}
+
+.laranja{
+  background-color: orange;
+  padding: 50px;
+  text-align: justify;
+  border-radius: 10px;
+  width: 89%;
+  margin: 20px;
+  box-shadow: 1px 1px 10px 1px #949494;
+}
+
+.rosa{
+  background-color: pink;
+  padding: 50px;
+  text-align: justify;
+  border-radius: 10px;
+  width: 89%;
+  margin: 20px;
+  box-shadow: 1px 1px 10px 1px #949494;
+  color: black;
 }
